# CCTV-System---Design-Lab

./: CMakeLists.txt  main.cpp
config/: camera_config.json
src/: camera.cpp  camera.h  main.cpp
